
[package]
name = "sandgame"
version = "0.1.0"
authors = ["Adam Godwin <madadadiscool@gmail.com>"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
image = "0.23.12"
rand = "0.8.0"
